--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -8,8 +8,8 @@
   <ion-content padding="true" class="has-header">
     <form id="deviceUART-form35" class="list">
       <div id="deviceUART-button-bar3" class="button-bar">
-        <button id="deviceUART-button58" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-dark button-block">UART 1</button>
-        <button id="deviceUART-button59" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-dark button-block">UART 2</button>
+        <button id="deviceUART-button58" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-stable button-large button-block">UART 1</button>
+        <button id="deviceUART-button59" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-stable button-block">UART 2</button>
       </div>
       <label class="item item-select" id="deviceUART-select9">
         <span class="input-label">Baud Rate</span>
