--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -1,47 +1,35 @@
 <ion-view title="View Device" hide-back-button="true" nav-transition="none" id="page13" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
-    <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
+    <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-trash-b" ng-click="submitDelete()"></button>
+    <button class="button button-icon icon ion-trash-b" ng-click="deleteDevice()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <div class="spacer" style="height: 10px;"></div>
-    <div id="viewDevice-markdown13" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">
-        <strong>Device Name:</strong> {{ data.devicename }}</p>
-    </div>
-    <div class="spacer" style="height: 10px;"></div>
-    <div id="viewDevice-markdown17" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">
-        <strong>UUID:</strong>
-      </p>
+    <div id="viewDevice-markdown13" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#444444;font-size:18px;">{{ data.devicename }}</p>
     </div>
     <form id="viewDevice-form24" class="list">
       <label class="item item-input" id="viewDevice-input35" name="input-deviceid">
+        <span class="input-label">UUID</span>
         <input type="text" placeholder="" ng-model="data.deviceid" readonly="">
       </label>
     </form>
-    <div id="viewDevice-markdown67" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">
-        <strong>Serial Number:</strong>
-      </p>
-    </div>
     <form id="viewDevice-form27" class="list">
       <label class="item item-input" id="viewDevice-input58" name="input-serialnumber">
+        <span class="input-label">Serial Number</span>
         <input type="text" placeholder="" ng-model="data.serialnumber" readonly="">
       </label>
     </form>
-    <div id="viewDevice-markdown68" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">
-        <strong>Creation Date:</strong>
-      </p>
-    </div>
     <form id="viewDevice-form31" class="list">
       <label class="item item-input" id="viewDevice-input59" name="input-timestamp">
+        <span class="input-label">Registration Date</span>
         <input type="text" placeholder="" ng-model="data.timestamp" readonly="">
       </label>
     </form>
-    <button id="viewDevice-button46" ng-click="submitTest()" class="button button-dark button-block">Control Device</button>
+    <button id="viewDevice-button56" ng-click="setDevice(&quot;restart&quot;)" class="button button-positive button-block">Restart Device</button>
+    <button id="viewDevice-button64" ng-click="setDevice(&quot;stop&quot;)" class="button button-balanced button-block">Start Device</button>
+    <button id="viewDevice-button57" ng-click="setDevice(&quot;start&quot;)" class="button button-assertive button-block">Stop Device</button>
+    <button id="viewDevice-button46" ng-click="configureDevice()" class="button button-dark button-block">Configure Device</button>
   </ion-content>
 </ion-view>
